front/parser.output
Grammar

    0 $accept: never $end

    1 expr: TOK_ID
    2     | TOK_NUM_INT
    3     | TOK_NUM_FLOAT
    4     | '-' expr
    5     | expr '+' expr
    6     | expr '-' expr
    7     | expr '*' expr
    8     | expr '/' expr
    9     | expr '%' expr
   10     | expr '<' expr
   11     | expr TOK_LTE expr
   12     | expr '>' expr
   13     | expr TOK_GTE expr
   14     | expr TOK_EQ expr
   15     | expr TOK_NEQ expr
   16     | expr TOK_AND expr
   17     | expr TOK_OR expr
   18     | TOK_NOT expr
   19     | '(' expr ')'
   20     | expr '?' expr ':' expr
   21     | func
   22     | expr '(' ')'
   23     | expr '(' expr_list ')'

   24 expr_list: expr
   25          | expr_list ',' expr

   26 var: TOK_INT
   27    | TOK_INT TOK_ID
   28    | TOK_FLOAT
   29    | TOK_FLOAT TOK_ID
   30    | '(' ')' TOK_RET var
   31    | '(' var_list ')' TOK_RET var
   32    | TOK_ID '(' ')' TOK_RET var
   33    | TOK_ID '(' var_list ')' TOK_RET var

   34 var_list: var
   35         | var_list ',' var

   36 func: TOK_FUNC TOK_ID '(' ')' TOK_RET var func_body
   37     | TOK_FUNC TOK_ID '(' var_list ')' TOK_RET var func_body
   38     | TOK_FUNC TOK_ID error

   39 func_body: '{' func_list TOK_RETURN expr ';' '}'
   40          | '{' TOK_RETURN expr ';' '}'
   41          | '{' '}'

   42 func_list: func
   43          | func_list func

   44 never: func_list


Terminals, with rules where they appear

$end (0) 0
'%' (37) 9
'(' (40) 19 22 23 30 31 32 33 36 37
')' (41) 19 22 23 30 31 32 33 36 37
'*' (42) 7
'+' (43) 5
',' (44) 25 35
'-' (45) 4 6
'/' (47) 8
':' (58) 20
';' (59) 39 40
'<' (60) 10
'>' (62) 12
'?' (63) 20
'{' (123) 39 40 41
'}' (125) 39 40 41
error (256) 38
TOK_ID (258) 1 27 29 32 33 36 37 38
TOK_NUM_FLOAT (259) 3
TOK_NUM_INT (260) 2
TOK_FLOAT (261) 28 29
TOK_INT (262) 26 27
TOK_FUNC (263) 36 37 38
TOK_RET (264) 30 31 32 33 36 37
TOK_RETURN (265) 39 40
TOK_OR (266) 17
TOK_AND (267) 16
TOK_EQ (268) 14
TOK_NEQ (269) 15
TOK_LTE (270) 11
TOK_GTE (271) 13
TOK_NOT (272) 18


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
expr (34)
    on left: 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
    22 23, on right: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 22
    23 24 25 39 40
expr_list (35)
    on left: 24 25, on right: 23 25
var (36)
    on left: 26 27 28 29 30 31 32 33, on right: 30 31 32 33 34 35 36
    37
var_list (37)
    on left: 34 35, on right: 31 33 35 37
func (38)
    on left: 36 37 38, on right: 21 42 43
func_body (39)
    on left: 39 40 41, on right: 36 37
func_list (40)
    on left: 42 43, on right: 39 43 44
never (41)
    on left: 44, on right: 0


State 0

    0 $accept: . never $end

    TOK_FUNC  shift, and go to state 1

    func       go to state 2
    func_list  go to state 3
    never      go to state 4


State 1

   36 func: TOK_FUNC . TOK_ID '(' ')' TOK_RET var func_body
   37     | TOK_FUNC . TOK_ID '(' var_list ')' TOK_RET var func_body
   38     | TOK_FUNC . TOK_ID error

    TOK_ID  shift, and go to state 5


State 2

   42 func_list: func .

    $default  reduce using rule 42 (func_list)


State 3

   43 func_list: func_list . func
   44 never: func_list .

    TOK_FUNC  shift, and go to state 1

    $default  reduce using rule 44 (never)

    func  go to state 6


State 4

    0 $accept: never . $end

    $end  shift, and go to state 7


State 5

   36 func: TOK_FUNC TOK_ID . '(' ')' TOK_RET var func_body
   37     | TOK_FUNC TOK_ID . '(' var_list ')' TOK_RET var func_body
   38     | TOK_FUNC TOK_ID . error

    error  shift, and go to state 8
    '('    shift, and go to state 9


State 6

   43 func_list: func_list func .

    $default  reduce using rule 43 (func_list)


State 7

    0 $accept: never $end .

    $default  accept


State 8

   38 func: TOK_FUNC TOK_ID error .

    $default  reduce using rule 38 (func)


State 9

   36 func: TOK_FUNC TOK_ID '(' . ')' TOK_RET var func_body
   37     | TOK_FUNC TOK_ID '(' . var_list ')' TOK_RET var func_body

    TOK_ID     shift, and go to state 10
    TOK_FLOAT  shift, and go to state 11
    TOK_INT    shift, and go to state 12
    '('        shift, and go to state 13
    ')'        shift, and go to state 14

    var       go to state 15
    var_list  go to state 16


State 10

   32 var: TOK_ID . '(' ')' TOK_RET var
   33    | TOK_ID . '(' var_list ')' TOK_RET var

    '('  shift, and go to state 17


State 11

   28 var: TOK_FLOAT .
   29    | TOK_FLOAT . TOK_ID

    TOK_ID  shift, and go to state 18

    $default  reduce using rule 28 (var)


State 12

   26 var: TOK_INT .
   27    | TOK_INT . TOK_ID

    TOK_ID  shift, and go to state 19

    $default  reduce using rule 26 (var)


State 13

   30 var: '(' . ')' TOK_RET var
   31    | '(' . var_list ')' TOK_RET var

    TOK_ID     shift, and go to state 10
    TOK_FLOAT  shift, and go to state 11
    TOK_INT    shift, and go to state 12
    '('        shift, and go to state 13
    ')'        shift, and go to state 20

    var       go to state 15
    var_list  go to state 21


State 14

   36 func: TOK_FUNC TOK_ID '(' ')' . TOK_RET var func_body

    TOK_RET  shift, and go to state 22


State 15

   34 var_list: var .

    $default  reduce using rule 34 (var_list)


State 16

   35 var_list: var_list . ',' var
   37 func: TOK_FUNC TOK_ID '(' var_list . ')' TOK_RET var func_body

    ')'  shift, and go to state 23
    ','  shift, and go to state 24


State 17

   32 var: TOK_ID '(' . ')' TOK_RET var
   33    | TOK_ID '(' . var_list ')' TOK_RET var

    TOK_ID     shift, and go to state 10
    TOK_FLOAT  shift, and go to state 11
    TOK_INT    shift, and go to state 12
    '('        shift, and go to state 13
    ')'        shift, and go to state 25

    var       go to state 15
    var_list  go to state 26


State 18

   29 var: TOK_FLOAT TOK_ID .

    $default  reduce using rule 29 (var)


State 19

   27 var: TOK_INT TOK_ID .

    $default  reduce using rule 27 (var)


State 20

   30 var: '(' ')' . TOK_RET var

    TOK_RET  shift, and go to state 27


State 21

   31 var: '(' var_list . ')' TOK_RET var
   35 var_list: var_list . ',' var

    ')'  shift, and go to state 28
    ','  shift, and go to state 24


State 22

   36 func: TOK_FUNC TOK_ID '(' ')' TOK_RET . var func_body

    TOK_ID     shift, and go to state 10
    TOK_FLOAT  shift, and go to state 11
    TOK_INT    shift, and go to state 12
    '('        shift, and go to state 13

    var  go to state 29


State 23

   37 func: TOK_FUNC TOK_ID '(' var_list ')' . TOK_RET var func_body

    TOK_RET  shift, and go to state 30


State 24

   35 var_list: var_list ',' . var

    TOK_ID     shift, and go to state 10
    TOK_FLOAT  shift, and go to state 11
    TOK_INT    shift, and go to state 12
    '('        shift, and go to state 13

    var  go to state 31


State 25

   32 var: TOK_ID '(' ')' . TOK_RET var

    TOK_RET  shift, and go to state 32


State 26

   33 var: TOK_ID '(' var_list . ')' TOK_RET var
   35 var_list: var_list . ',' var

    ')'  shift, and go to state 33
    ','  shift, and go to state 24


State 27

   30 var: '(' ')' TOK_RET . var

    TOK_ID     shift, and go to state 10
    TOK_FLOAT  shift, and go to state 11
    TOK_INT    shift, and go to state 12
    '('        shift, and go to state 13

    var  go to state 34


State 28

   31 var: '(' var_list ')' . TOK_RET var

    TOK_RET  shift, and go to state 35


State 29

   36 func: TOK_FUNC TOK_ID '(' ')' TOK_RET var . func_body

    '{'  shift, and go to state 36

    func_body  go to state 37


State 30

   37 func: TOK_FUNC TOK_ID '(' var_list ')' TOK_RET . var func_body

    TOK_ID     shift, and go to state 10
    TOK_FLOAT  shift, and go to state 11
    TOK_INT    shift, and go to state 12
    '('        shift, and go to state 13

    var  go to state 38


State 31

   35 var_list: var_list ',' var .

    $default  reduce using rule 35 (var_list)


State 32

   32 var: TOK_ID '(' ')' TOK_RET . var

    TOK_ID     shift, and go to state 10
    TOK_FLOAT  shift, and go to state 11
    TOK_INT    shift, and go to state 12
    '('        shift, and go to state 13

    var  go to state 39


State 33

   33 var: TOK_ID '(' var_list ')' . TOK_RET var

    TOK_RET  shift, and go to state 40


State 34

   30 var: '(' ')' TOK_RET var .

    $default  reduce using rule 30 (var)


State 35

   31 var: '(' var_list ')' TOK_RET . var

    TOK_ID     shift, and go to state 10
    TOK_FLOAT  shift, and go to state 11
    TOK_INT    shift, and go to state 12
    '('        shift, and go to state 13

    var  go to state 41


State 36

   39 func_body: '{' . func_list TOK_RETURN expr ';' '}'
   40          | '{' . TOK_RETURN expr ';' '}'
   41          | '{' . '}'

    TOK_FUNC    shift, and go to state 1
    TOK_RETURN  shift, and go to state 42
    '}'         shift, and go to state 43

    func       go to state 2
    func_list  go to state 44


State 37

   36 func: TOK_FUNC TOK_ID '(' ')' TOK_RET var func_body .

    $default  reduce using rule 36 (func)


State 38

   37 func: TOK_FUNC TOK_ID '(' var_list ')' TOK_RET var . func_body

    '{'  shift, and go to state 36

    func_body  go to state 45


State 39

   32 var: TOK_ID '(' ')' TOK_RET var .

    $default  reduce using rule 32 (var)


State 40

   33 var: TOK_ID '(' var_list ')' TOK_RET . var

    TOK_ID     shift, and go to state 10
    TOK_FLOAT  shift, and go to state 11
    TOK_INT    shift, and go to state 12
    '('        shift, and go to state 13

    var  go to state 46


State 41

   31 var: '(' var_list ')' TOK_RET var .

    $default  reduce using rule 31 (var)


State 42

   40 func_body: '{' TOK_RETURN . expr ';' '}'

    TOK_ID         shift, and go to state 47
    TOK_NUM_FLOAT  shift, and go to state 48
    TOK_NUM_INT    shift, and go to state 49
    TOK_FUNC       shift, and go to state 1
    '-'            shift, and go to state 50
    TOK_NOT        shift, and go to state 51
    '('            shift, and go to state 52

    expr  go to state 53
    func  go to state 54


State 43

   41 func_body: '{' '}' .

    $default  reduce using rule 41 (func_body)


State 44

   39 func_body: '{' func_list . TOK_RETURN expr ';' '}'
   43 func_list: func_list . func

    TOK_FUNC    shift, and go to state 1
    TOK_RETURN  shift, and go to state 55

    func  go to state 6


State 45

   37 func: TOK_FUNC TOK_ID '(' var_list ')' TOK_RET var func_body .

    $default  reduce using rule 37 (func)


State 46

   33 var: TOK_ID '(' var_list ')' TOK_RET var .

    $default  reduce using rule 33 (var)


State 47

    1 expr: TOK_ID .

    $default  reduce using rule 1 (expr)


State 48

    3 expr: TOK_NUM_FLOAT .

    $default  reduce using rule 3 (expr)


State 49

    2 expr: TOK_NUM_INT .

    $default  reduce using rule 2 (expr)


State 50

    4 expr: '-' . expr

    TOK_ID         shift, and go to state 47
    TOK_NUM_FLOAT  shift, and go to state 48
    TOK_NUM_INT    shift, and go to state 49
    TOK_FUNC       shift, and go to state 1
    '-'            shift, and go to state 50
    TOK_NOT        shift, and go to state 51
    '('            shift, and go to state 52

    expr  go to state 56
    func  go to state 54


State 51

   18 expr: TOK_NOT . expr

    TOK_ID         shift, and go to state 47
    TOK_NUM_FLOAT  shift, and go to state 48
    TOK_NUM_INT    shift, and go to state 49
    TOK_FUNC       shift, and go to state 1
    '-'            shift, and go to state 50
    TOK_NOT        shift, and go to state 51
    '('            shift, and go to state 52

    expr  go to state 57
    func  go to state 54


State 52

   19 expr: '(' . expr ')'

    TOK_ID         shift, and go to state 47
    TOK_NUM_FLOAT  shift, and go to state 48
    TOK_NUM_INT    shift, and go to state 49
    TOK_FUNC       shift, and go to state 1
    '-'            shift, and go to state 50
    TOK_NOT        shift, and go to state 51
    '('            shift, and go to state 52

    expr  go to state 58
    func  go to state 54


State 53

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr
    9     | expr . '%' expr
   10     | expr . '<' expr
   11     | expr . TOK_LTE expr
   12     | expr . '>' expr
   13     | expr . TOK_GTE expr
   14     | expr . TOK_EQ expr
   15     | expr . TOK_NEQ expr
   16     | expr . TOK_AND expr
   17     | expr . TOK_OR expr
   20     | expr . '?' expr ':' expr
   22     | expr . '(' ')'
   23     | expr . '(' expr_list ')'
   40 func_body: '{' TOK_RETURN expr . ';' '}'

    '?'      shift, and go to state 59
    TOK_OR   shift, and go to state 60
    TOK_AND  shift, and go to state 61
    TOK_EQ   shift, and go to state 62
    TOK_NEQ  shift, and go to state 63
    '<'      shift, and go to state 64
    '>'      shift, and go to state 65
    TOK_LTE  shift, and go to state 66
    TOK_GTE  shift, and go to state 67
    '+'      shift, and go to state 68
    '-'      shift, and go to state 69
    '*'      shift, and go to state 70
    '/'      shift, and go to state 71
    '%'      shift, and go to state 72
    '('      shift, and go to state 73
    ';'      shift, and go to state 74


State 54

   21 expr: func .

    $default  reduce using rule 21 (expr)


State 55

   39 func_body: '{' func_list TOK_RETURN . expr ';' '}'

    TOK_ID         shift, and go to state 47
    TOK_NUM_FLOAT  shift, and go to state 48
    TOK_NUM_INT    shift, and go to state 49
    TOK_FUNC       shift, and go to state 1
    '-'            shift, and go to state 50
    TOK_NOT        shift, and go to state 51
    '('            shift, and go to state 52

    expr  go to state 75
    func  go to state 54


State 56

    4 expr: '-' expr .
    5     | expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr
    9     | expr . '%' expr
   10     | expr . '<' expr
   11     | expr . TOK_LTE expr
   12     | expr . '>' expr
   13     | expr . TOK_GTE expr
   14     | expr . TOK_EQ expr
   15     | expr . TOK_NEQ expr
   16     | expr . TOK_AND expr
   17     | expr . TOK_OR expr
   20     | expr . '?' expr ':' expr
   22     | expr . '(' ')'
   23     | expr . '(' expr_list ')'

    '('  shift, and go to state 73

    $default  reduce using rule 4 (expr)

    Conflict between rule 4 and token '?' resolved as reduce ('?' < TOK_NOT).
    Conflict between rule 4 and token TOK_OR resolved as reduce (TOK_OR < TOK_NOT).
    Conflict between rule 4 and token TOK_AND resolved as reduce (TOK_AND < TOK_NOT).
    Conflict between rule 4 and token TOK_EQ resolved as reduce (TOK_EQ < TOK_NOT).
    Conflict between rule 4 and token TOK_NEQ resolved as reduce (TOK_NEQ < TOK_NOT).
    Conflict between rule 4 and token '<' resolved as reduce ('<' < TOK_NOT).
    Conflict between rule 4 and token '>' resolved as reduce ('>' < TOK_NOT).
    Conflict between rule 4 and token TOK_LTE resolved as reduce (TOK_LTE < TOK_NOT).
    Conflict between rule 4 and token TOK_GTE resolved as reduce (TOK_GTE < TOK_NOT).
    Conflict between rule 4 and token '+' resolved as reduce ('+' < TOK_NOT).
    Conflict between rule 4 and token '-' resolved as reduce ('-' < TOK_NOT).
    Conflict between rule 4 and token '*' resolved as reduce ('*' < TOK_NOT).
    Conflict between rule 4 and token '/' resolved as reduce ('/' < TOK_NOT).
    Conflict between rule 4 and token '%' resolved as reduce ('%' < TOK_NOT).
    Conflict between rule 4 and token '(' resolved as shift (TOK_NOT < '(').


State 57

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr
    9     | expr . '%' expr
   10     | expr . '<' expr
   11     | expr . TOK_LTE expr
   12     | expr . '>' expr
   13     | expr . TOK_GTE expr
   14     | expr . TOK_EQ expr
   15     | expr . TOK_NEQ expr
   16     | expr . TOK_AND expr
   17     | expr . TOK_OR expr
   18     | TOK_NOT expr .
   20     | expr . '?' expr ':' expr
   22     | expr . '(' ')'
   23     | expr . '(' expr_list ')'

    '('  shift, and go to state 73

    $default  reduce using rule 18 (expr)

    Conflict between rule 18 and token '?' resolved as reduce ('?' < TOK_NOT).
    Conflict between rule 18 and token TOK_OR resolved as reduce (TOK_OR < TOK_NOT).
    Conflict between rule 18 and token TOK_AND resolved as reduce (TOK_AND < TOK_NOT).
    Conflict between rule 18 and token TOK_EQ resolved as reduce (TOK_EQ < TOK_NOT).
    Conflict between rule 18 and token TOK_NEQ resolved as reduce (TOK_NEQ < TOK_NOT).
    Conflict between rule 18 and token '<' resolved as reduce ('<' < TOK_NOT).
    Conflict between rule 18 and token '>' resolved as reduce ('>' < TOK_NOT).
    Conflict between rule 18 and token TOK_LTE resolved as reduce (TOK_LTE < TOK_NOT).
    Conflict between rule 18 and token TOK_GTE resolved as reduce (TOK_GTE < TOK_NOT).
    Conflict between rule 18 and token '+' resolved as reduce ('+' < TOK_NOT).
    Conflict between rule 18 and token '-' resolved as reduce ('-' < TOK_NOT).
    Conflict between rule 18 and token '*' resolved as reduce ('*' < TOK_NOT).
    Conflict between rule 18 and token '/' resolved as reduce ('/' < TOK_NOT).
    Conflict between rule 18 and token '%' resolved as reduce ('%' < TOK_NOT).
    Conflict between rule 18 and token '(' resolved as shift (TOK_NOT < '(').


State 58

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr
    9     | expr . '%' expr
   10     | expr . '<' expr
   11     | expr . TOK_LTE expr
   12     | expr . '>' expr
   13     | expr . TOK_GTE expr
   14     | expr . TOK_EQ expr
   15     | expr . TOK_NEQ expr
   16     | expr . TOK_AND expr
   17     | expr . TOK_OR expr
   19     | '(' expr . ')'
   20     | expr . '?' expr ':' expr
   22     | expr . '(' ')'
   23     | expr . '(' expr_list ')'

    '?'      shift, and go to state 59
    TOK_OR   shift, and go to state 60
    TOK_AND  shift, and go to state 61
    TOK_EQ   shift, and go to state 62
    TOK_NEQ  shift, and go to state 63
    '<'      shift, and go to state 64
    '>'      shift, and go to state 65
    TOK_LTE  shift, and go to state 66
    TOK_GTE  shift, and go to state 67
    '+'      shift, and go to state 68
    '-'      shift, and go to state 69
    '*'      shift, and go to state 70
    '/'      shift, and go to state 71
    '%'      shift, and go to state 72
    '('      shift, and go to state 73
    ')'      shift, and go to state 76


State 59

   20 expr: expr '?' . expr ':' expr

    TOK_ID         shift, and go to state 47
    TOK_NUM_FLOAT  shift, and go to state 48
    TOK_NUM_INT    shift, and go to state 49
    TOK_FUNC       shift, and go to state 1
    '-'            shift, and go to state 50
    TOK_NOT        shift, and go to state 51
    '('            shift, and go to state 52

    expr  go to state 77
    func  go to state 54


State 60

   17 expr: expr TOK_OR . expr

    TOK_ID         shift, and go to state 47
    TOK_NUM_FLOAT  shift, and go to state 48
    TOK_NUM_INT    shift, and go to state 49
    TOK_FUNC       shift, and go to state 1
    '-'            shift, and go to state 50
    TOK_NOT        shift, and go to state 51
    '('            shift, and go to state 52

    expr  go to state 78
    func  go to state 54


State 61

   16 expr: expr TOK_AND . expr

    TOK_ID         shift, and go to state 47
    TOK_NUM_FLOAT  shift, and go to state 48
    TOK_NUM_INT    shift, and go to state 49
    TOK_FUNC       shift, and go to state 1
    '-'            shift, and go to state 50
    TOK_NOT        shift, and go to state 51
    '('            shift, and go to state 52

    expr  go to state 79
    func  go to state 54


State 62

   14 expr: expr TOK_EQ . expr

    TOK_ID         shift, and go to state 47
    TOK_NUM_FLOAT  shift, and go to state 48
    TOK_NUM_INT    shift, and go to state 49
    TOK_FUNC       shift, and go to state 1
    '-'            shift, and go to state 50
    TOK_NOT        shift, and go to state 51
    '('            shift, and go to state 52

    expr  go to state 80
    func  go to state 54


State 63

   15 expr: expr TOK_NEQ . expr

    TOK_ID         shift, and go to state 47
    TOK_NUM_FLOAT  shift, and go to state 48
    TOK_NUM_INT    shift, and go to state 49
    TOK_FUNC       shift, and go to state 1
    '-'            shift, and go to state 50
    TOK_NOT        shift, and go to state 51
    '('            shift, and go to state 52

    expr  go to state 81
    func  go to state 54


State 64

   10 expr: expr '<' . expr

    TOK_ID         shift, and go to state 47
    TOK_NUM_FLOAT  shift, and go to state 48
    TOK_NUM_INT    shift, and go to state 49
    TOK_FUNC       shift, and go to state 1
    '-'            shift, and go to state 50
    TOK_NOT        shift, and go to state 51
    '('            shift, and go to state 52

    expr  go to state 82
    func  go to state 54


State 65

   12 expr: expr '>' . expr

    TOK_ID         shift, and go to state 47
    TOK_NUM_FLOAT  shift, and go to state 48
    TOK_NUM_INT    shift, and go to state 49
    TOK_FUNC       shift, and go to state 1
    '-'            shift, and go to state 50
    TOK_NOT        shift, and go to state 51
    '('            shift, and go to state 52

    expr  go to state 83
    func  go to state 54


State 66

   11 expr: expr TOK_LTE . expr

    TOK_ID         shift, and go to state 47
    TOK_NUM_FLOAT  shift, and go to state 48
    TOK_NUM_INT    shift, and go to state 49
    TOK_FUNC       shift, and go to state 1
    '-'            shift, and go to state 50
    TOK_NOT        shift, and go to state 51
    '('            shift, and go to state 52

    expr  go to state 84
    func  go to state 54


State 67

   13 expr: expr TOK_GTE . expr

    TOK_ID         shift, and go to state 47
    TOK_NUM_FLOAT  shift, and go to state 48
    TOK_NUM_INT    shift, and go to state 49
    TOK_FUNC       shift, and go to state 1
    '-'            shift, and go to state 50
    TOK_NOT        shift, and go to state 51
    '('            shift, and go to state 52

    expr  go to state 85
    func  go to state 54


State 68

    5 expr: expr '+' . expr

    TOK_ID         shift, and go to state 47
    TOK_NUM_FLOAT  shift, and go to state 48
    TOK_NUM_INT    shift, and go to state 49
    TOK_FUNC       shift, and go to state 1
    '-'            shift, and go to state 50
    TOK_NOT        shift, and go to state 51
    '('            shift, and go to state 52

    expr  go to state 86
    func  go to state 54


State 69

    6 expr: expr '-' . expr

    TOK_ID         shift, and go to state 47
    TOK_NUM_FLOAT  shift, and go to state 48
    TOK_NUM_INT    shift, and go to state 49
    TOK_FUNC       shift, and go to state 1
    '-'            shift, and go to state 50
    TOK_NOT        shift, and go to state 51
    '('            shift, and go to state 52

    expr  go to state 87
    func  go to state 54


State 70

    7 expr: expr '*' . expr

    TOK_ID         shift, and go to state 47
    TOK_NUM_FLOAT  shift, and go to state 48
    TOK_NUM_INT    shift, and go to state 49
    TOK_FUNC       shift, and go to state 1
    '-'            shift, and go to state 50
    TOK_NOT        shift, and go to state 51
    '('            shift, and go to state 52

    expr  go to state 88
    func  go to state 54


State 71

    8 expr: expr '/' . expr

    TOK_ID         shift, and go to state 47
    TOK_NUM_FLOAT  shift, and go to state 48
    TOK_NUM_INT    shift, and go to state 49
    TOK_FUNC       shift, and go to state 1
    '-'            shift, and go to state 50
    TOK_NOT        shift, and go to state 51
    '('            shift, and go to state 52

    expr  go to state 89
    func  go to state 54


State 72

    9 expr: expr '%' . expr

    TOK_ID         shift, and go to state 47
    TOK_NUM_FLOAT  shift, and go to state 48
    TOK_NUM_INT    shift, and go to state 49
    TOK_FUNC       shift, and go to state 1
    '-'            shift, and go to state 50
    TOK_NOT        shift, and go to state 51
    '('            shift, and go to state 52

    expr  go to state 90
    func  go to state 54


State 73

   22 expr: expr '(' . ')'
   23     | expr '(' . expr_list ')'

    TOK_ID         shift, and go to state 47
    TOK_NUM_FLOAT  shift, and go to state 48
    TOK_NUM_INT    shift, and go to state 49
    TOK_FUNC       shift, and go to state 1
    '-'            shift, and go to state 50
    TOK_NOT        shift, and go to state 51
    '('            shift, and go to state 52
    ')'            shift, and go to state 91

    expr       go to state 92
    expr_list  go to state 93
    func       go to state 54


State 74

   40 func_body: '{' TOK_RETURN expr ';' . '}'

    '}'  shift, and go to state 94


State 75

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr
    9     | expr . '%' expr
   10     | expr . '<' expr
   11     | expr . TOK_LTE expr
   12     | expr . '>' expr
   13     | expr . TOK_GTE expr
   14     | expr . TOK_EQ expr
   15     | expr . TOK_NEQ expr
   16     | expr . TOK_AND expr
   17     | expr . TOK_OR expr
   20     | expr . '?' expr ':' expr
   22     | expr . '(' ')'
   23     | expr . '(' expr_list ')'
   39 func_body: '{' func_list TOK_RETURN expr . ';' '}'

    '?'      shift, and go to state 59
    TOK_OR   shift, and go to state 60
    TOK_AND  shift, and go to state 61
    TOK_EQ   shift, and go to state 62
    TOK_NEQ  shift, and go to state 63
    '<'      shift, and go to state 64
    '>'      shift, and go to state 65
    TOK_LTE  shift, and go to state 66
    TOK_GTE  shift, and go to state 67
    '+'      shift, and go to state 68
    '-'      shift, and go to state 69
    '*'      shift, and go to state 70
    '/'      shift, and go to state 71
    '%'      shift, and go to state 72
    '('      shift, and go to state 73
    ';'      shift, and go to state 95


State 76

   19 expr: '(' expr ')' .

    $default  reduce using rule 19 (expr)


State 77

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr
    9     | expr . '%' expr
   10     | expr . '<' expr
   11     | expr . TOK_LTE expr
   12     | expr . '>' expr
   13     | expr . TOK_GTE expr
   14     | expr . TOK_EQ expr
   15     | expr . TOK_NEQ expr
   16     | expr . TOK_AND expr
   17     | expr . TOK_OR expr
   20     | expr . '?' expr ':' expr
   20     | expr '?' expr . ':' expr
   22     | expr . '(' ')'
   23     | expr . '(' expr_list ')'

    '?'      shift, and go to state 59
    ':'      shift, and go to state 96
    TOK_OR   shift, and go to state 60
    TOK_AND  shift, and go to state 61
    TOK_EQ   shift, and go to state 62
    TOK_NEQ  shift, and go to state 63
    '<'      shift, and go to state 64
    '>'      shift, and go to state 65
    TOK_LTE  shift, and go to state 66
    TOK_GTE  shift, and go to state 67
    '+'      shift, and go to state 68
    '-'      shift, and go to state 69
    '*'      shift, and go to state 70
    '/'      shift, and go to state 71
    '%'      shift, and go to state 72
    '('      shift, and go to state 73


State 78
